Fixed problems with REST call for Regions
