# pkg/pb/cmdb.swagger.json
@@ -366,14 +366,14 @@
       "type": "object",
       "title": "Region represents a particular AWS Region",
       "properties": {
+        "description": {
+          "type": "string",
+          "title": "The description of the region"
+        },
         "id": {
           "description": "The resource identifier.",
           "type": "string",
           "readOnly": true
-        },
-        "middle_name": {
-          "type": "string",
-          "title": "The description of the region"
         },
         "name": {
           "type": "string",
